Salesforce/main/default/main/default/objects/Variedad__c/Variedad__c.object-meta.xml
<CustomObject>
    <description>Variedades, disponibles para incluir en los Contratos de Multiplicación</description>
    <label>Variedad</label>
    <nameField>
        <label>Nome Comercial</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Variedades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>