Salesforce/main/default/main/default/objects/Variedad__c/fields/Classes_de_Bonificacao__c.field-meta.xml
<CustomField>
    <fullName>Classes_de_Bonificacao__c</fullName>
    <label>Classes da Política de Bonificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>