Salesforce/main/default/main/default/objects/Variedad__c/fields/Comercializa_Paraguai__c.field-meta.xml
<CustomField>
    <fullName>Comercializa_Paraguai__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Comercializa Paraguai</label>
    <type>Checkbox</type>
</CustomField>