Salesforce/main/default/main/default/objects/Variedad__c/fields/Cultura__c.field-meta.xml
<CustomField>
    <fullName>Cultura__c</fullName>
    <label>Cultura</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOJA</fullName>
            </value>
            <value>
                <fullName>MILHO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>