Salesforce/main/default/main/default/objects/Variedad__c/fields/Disponivel_para_Don_Mario_Valoriza__c.field-meta.xml
<CustomField>
    <fullName>Disponivel_para_Don_Mario_Valoriza__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disponível para Don Mario Valoriza</label>
    <type>Checkbox</type>
</CustomField>