Salesforce/main/default/main/default/objects/Variedad__c/fields/Disponivel_para_venda_basica__c.field-meta.xml
<CustomField>
    <fullName>Disponivel_para_venda_basica__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disponivel para venda basica</label>
    <type>Checkbox</type>
</CustomField>