Salesforce/main/default/main/default/objects/Variedad__c/fields/Exigencia_a_Fertilidade__c.field-meta.xml
<CustomField>
    <fullName>Exigencia_a_Fertilidade__c</fullName>
    <label>Exigência a Fertilidade</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>