Salesforce/main/default/main/default/objects/Variedad__c/fields/GID__c.field-meta.xml
<CustomField>
    <fullName>GID__c</fullName>
    <label>GID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>