Salesforce/main/default/main/default/objects/Variedad__c/fields/Marca_comercial__c.field-meta.xml
<CustomField>
    <fullName>Marca_comercial__c</fullName>
    <label>Marca comercial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DM Sementes</fullName>
                <label>DONMARIO</label>
            </value>
            <value>
                <fullName>Brasmax</fullName>
                <label>BRASMAX</label>
            </value>
            <value>
                <fullName>Neogen</fullName>
                <label>NEOGEN</label>
            </value>
            <value>
                <fullName>Dagma</fullName>
                <label>DAGMA</label>
            </value>
            <value>
                <fullName>Licenças</fullName>
                <label>LICENÇAS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>