Salesforce/main/default/main/default/objects/Variedad__c/fields/Nombre_de_Registro__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Registro__c</fullName>
    <externalId>true</externalId>
    <label>Nombre de Registro</label>
    <length>30</length>
    <type>Text</type>
</CustomField>