Salesforce/main/default/main/default/objects/Variedad__c/fields/Path_Cisto__c.field-meta.xml
<CustomField>
    <fullName>Path_Cisto__c</fullName>
    <label>Path Cisto</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>