Salesforce/main/default/main/default/objects/Variedad__c/fields/Path_Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Path_Tecnologia__c</fullName>
    <label>Path Tecnologia</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>