Salesforce/main/default/main/default/objects/Variedad__c/fields/Peso_de_Mil_Graos__c.field-meta.xml
<CustomField>
    <fullName>Peso_de_Mil_Graos__c</fullName>
    <label>Peso de Mil Grãos</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>