Salesforce/main/default/main/default/objects/Variedad__c/fields/Ramificacao__c.field-meta.xml
<CustomField>
    <fullName>Ramificacao__c</fullName>
    <label>Ramificação</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Baixa</fullName>
            </value>
            <value>
                <fullName>Média</fullName>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>