Salesforce/main/default/main/default/objects/Variedad__c/fields/Regiao_disponivel_para_venda_basica__c.field-meta.xml
<CustomField>
    <fullName>Regiao_disponivel_para_venda_basica__c</fullName>
    <label>Região disponível para venda básica</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>REGION 1</fullName>
            </value>
            <value>
                <fullName>REGION 2</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>