Salesforce/main/default/main/default/objects/Variedad__c/fields/Region_bonificacion__c.field-meta.xml
<CustomField>
    <fullName>Region_bonificacion__c</fullName>
    <label>Região para bonificação</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUL</fullName>
            </value>
            <value>
                <fullName>CERRADO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>