Salesforce/main/default/main/default/objects/Variedad__c/fields/Safra_Lancamento__c.field-meta.xml
<CustomField>
    <fullName>Safra_Lancamento__c</fullName>
    <label>Safra Lançamento</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21/22</fullName>
            </value>
            <value>
                <fullName>20/21</fullName>
            </value>
            <value>
                <fullName>19/20</fullName>
            </value>
            <value>
                <fullName>18/19</fullName>
            </value>
            <value>
                <fullName>17/18</fullName>
            </value>
            <value>
                <fullName>16/17</fullName>
            </value>
            <value>
                <fullName>15/16</fullName>
            </value>
            <value>
                <fullName>14/15</fullName>
            </value>
            <value>
                <fullName>13/14</fullName>
            </value>
            <value>
                <fullName>12/13</fullName>
            </value>
            <value>
                <fullName>11/12</fullName>
            </value>
            <value>
                <fullName>10/11</fullName>
            </value>
            <value>
                <fullName>09/10</fullName>
            </value>
            <value>
                <fullName>08/09</fullName>
            </value>
            <value>
                <fullName>07/08</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>