Salesforce/main/default/main/default/objects/Variedad__c/fields/Tecnologia__c.field-meta.xml
<CustomField>
    <fullName>Tecnologia__c</fullName>
    <label>Tecnologia</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>IPRO</fullName>
            </value>
            <value>
                <fullName>CE</fullName>
            </value>
            <value>
                <fullName>E</fullName>
            </value>
            <value>
                <fullName>I2X</fullName>
            </value>
            <value>
                <fullName>XTD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>