Salesforce/main/default/main/default/objects/Variedad__c/fields/Unidade_Preco__c.field-meta.xml
<CustomField>
    <fullName>Unidade_Preco__c</fullName>
    <label>Unidade Preço</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>BRL</fullName>
                <isActive>false</isActive>
                <label>BRL</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>