Salesforce/main/default/main/default/objects/Variedad__c/fields/URL_Compra_2__c.field-meta.xml
<CustomField>
    <fullName>URL_Compra_2__c</fullName>
    <label>URL Compra 2</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>